JDK 24: added example of Class File API transformation